# json-array-to-csv

./: .gitignore  Cargo.toml
example_data/: header_mappings.json
example_data/mappings/: load_cr_cc_approximations.json  load_cr_led_cc_verification.json
src/: cli_io.rs  errors.rs  header_map.rs  header_mappings.rs  main.rs
src/effects/: filters.rs  mod.rs  numbers.rs  objects.rs  truthy_keys.rs
