[package]
name = "json-array-to-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bpaf = { version = "0.9.15", features = ["derive"] }
csv = "1.3.1"
indexmap = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
serde_path_to_error = "0.1.16"
